kubernetes/gke-utility/kops-discovery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kops-discovery
  labels:
    app: kops-discovery
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: kops-discovery
