kubernetes/gke-utility/kops-discovery/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kops-discovery
spec:
  parentRefs:
  - name: istio-ingressgateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - discovery.kops.k8s.io
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: kops-discovery
      port: 443
